kubernetes/infrastructure/controllers/traefik/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/managed-by: flux
